# enterprise-rag-knowledge-base-vibecoding-tutorial

backend/: .gitignore  README.md  docker-compose.yml  mvnw.cmd  (+3 more)
backend/ai-services/: .env.example  .gitignore  Dockerfile  docker-compose.yml  exceptions.py  pyproject.toml  requirements.txt
backend/ai-services/api/: __init__.py  chunker.py  embedding.py  entity.py  error_handlers.py  graph.py  health.py  kg_error_handlers.py  kg_health.py  kg_management.py  parser.py  qa.py  relation.py  search.py
backend/ai-services/api/system/: __init__.py  audit.py  config.py  statistics.py  status.py
backend/ai-services/app/: kg_main.py  main.py
backend/ai-services/config/: __init__.py  database.py  dependencies.py  kg_settings.py  logging.py  settings.py
backend/ai-services/exceptions/: __init__.py  kg_exceptions.py
backend/ai-services/models/: __init__.py  chunker_models.py  embedding_models.py  entity.py  kg_models.py  parser_models.py  qa_models.py  relation.py  system_models.py
backend/ai-services/services/: __init__.py
backend/ai-services/services/cache/: __init__.py  memory_cache.py  redis_cache.py
backend/ai-services/services/chunker/: __init__.py  chunk_config.py  fixed_chunker.py  semantic_chunker.py
backend/ai-services/services/embedding/: __init__.py  es_client.py  milvus_client.py  qwen_embedding.py
backend/ai-services/services/kg/: __init__.py
backend/ai-services/services/kg/entity/: __init__.py  entity_processor.py  entity_resolver.py  llm_extractor.py
backend/ai-services/services/kg/evidence/: __init__.py  chain_builder.py  visualization.py
backend/ai-services/services/kg/graph/: __init__.py  entity_repository.py  index_manager.py  multi_hop_query.py  neo4j_client.py  path_query.py  quality_evaluator.py  relation_repository.py  statistics.py  traversal_engine.py
backend/ai-services/services/kg/pipeline/: __init__.py  kg_pipeline.py
backend/ai-services/services/kg/relation/: __init__.py  llm_extractor.py  relation_processor.py
backend/ai-services/services/parser/: __init__.py  markdown_parser.py  pdf_parser.py  text_cleaner.py  word_parser.py
backend/ai-services/services/qa/: __init__.py  context_builder.py  prompt_template.py  reference_annotator.py  stream_handler.py
backend/ai-services/services/search/: __init__.py  reranker.py  rrf_fusion.py
backend/ai-services/tests/: conftest.py  test_api.py  test_cache.py  test_chunker.py  test_entity_extractor.py  test_es_client.py  test_graph_repository.py  test_integration.py  test_kg_api.py  test_kg_pipeline.py  test_parser.py  test_qa.py  test_relation_extractor.py  test_rrf_fusion.py  test_system.py  test_traversal.py
backend/ai-services/utils/: __init__.py  response.py
(+233 files in other folders)
